[project]
name = "prob4cast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Davi Sales Barreira", email = "davisbarreira@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
