[project]
name = "prob4cast"
version = "0.1.0"
description = "Probabilistic forecasting utilities."
readme = "README.md"
authors = [
    { name = "Davi Sales Barreira", email = "davisbarreira@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
